app/assets/stylesheets/observations/search.scss
/* ... */
.street-view-toggle-control img {
  display: block;
  height: 24px;
  margin: 8px auto;
  width: 24px;
}
#obs-container,
#obs-container .container,
#map, #observations-map {
  height: 550px;
}
#observations-map {
  background-color: #e3eaf6;
}
#obs-container { position: relative; }
#obs {
  background-color: white;
  padding: 0px;
  height: 420px;
  overflow-x: hidden;
  overflow-y: scroll;
  position: relative;
  top: 15px;
}
#maprow {
  position: relative;
  height: 0;
}
.fullscreen-enabled #maprow,
#obs-container.fullscreen-enabled {
  position: absolute;
  inset-inline-start: 0;
  top: 0;
}
#map-controls {
  position: absolute;
  top: 95px;
  inset-inline-start: 15px;
}
.btn [class^="icon-"],
.btn [class*=" icon-"] {
  position: relative;
  top: -3px;
}
#map-legend-control {
  position: absolute;
  top: 500px;
  inset-inline-start: 15px;
}
#map-legend {
  position: static;
  display: block !important;
  border: 0 transparent;
  box-shadow: none;
  top: -366px;
  inset-inline-start: -320px;
}
#map-legend-control .gmapv3legend { max-width: none; }
#map-legend-control .gmapv3legend .ul-container {
  width: 400px;
}
#map-legend-control .gmapv3legend .ul-container ul.inat-overlay.left,
#map-legend-control .gmapv3legend .ul-container ul.inat-overlay.right {
  float: left;
  width: 200px;
}

[dir="rtl"] #map-legend-control .gmapv3legend .ul-container ul.inat-overlay.left,
#map-legend-control .gmapv3legend .ul-container ul.inat-overlay.right {
  float: right;
  width: 200px;
}

.bootstrap #map-legend-control .label {
  color: black;
  white-space: normal;
  text-align: start;
  font-size: 14px;
  line-height: 14px;
}
.fullscreen-enabled #map-controls {
  top: 20px;
  inset-inline-start: 20px;
}
.fullscreen-enabled #map-legend-control {
  bottom: 40px;
  top: auto;
  inset-inline-start: 20px;
}
.fullscreen-enabled #map-controls,
.fullscreen-enabled #map-legend-control {
  z-index: 1001;
  position: fixed;
}
#map-controls .btn-group {
  display: block;
  margin-bottom: 10px;
}
#map-controls .btn { text-align: center; }
#filters {
  padding: 20px 0;
}
#filters h1 {
  float: left;
}

[dir="rtl"] #filters h1 {
  float: right;
} 

#filter-container,
#filters .primary-filters {
  margin-top: 20px;
  display: flex;
  align-items: flex-start;
  gap: 5px;
  margin-inline-end: 5px;

  > button {
    margin: 0;
    color: #fff;
    background: $btn-orange;
  }

  .without-taxa {
    z-index: 2;
    position: relative;
    li {
      display: flex;
      align-items: center;
      button {
        position: relative;
        top: 1px;
      }
    }
  }
}
#filters .form-control {
  display: inline-block;
}

.bootstrap #filter-container > button.btn-default {
  background-color: $btn-grey;
  border-color: $btn-grey;
  color: #eee;
  position: relative;
  padding: 5px 12px 7px;
}
.bootstrap #filter-container > button:hover { color: white; }
.bootstrap #filter-container > button.btn-default .badge {
  background-color: #74ac00;
  position: absolute;
  top: -10px;
  inset-inline-end: -10px;
}

.bootstrap #filter-container .filter-changed,
.bootstrap #filter-container .filter-changed label {
  color: #74ac00;
  font-weight: bold;
}
#filter-container select.filter-changed,
#filter-container button.filter-changed,
#filter-container .form-control.filter-changed {
  color: #74ac00;
  border-color: #74ac00;
  background-color: rgba(16, 172, 0, 0.1);
}

#filter-container .fa-sliders {
  font-size: 120%;
  margin-inline-end: 5px;
}
#filter-container .fa-sliders:before {
  top: 1px;
  position: relative;
}

#filter-dropdown {
  width: 900px;
}
#filters .dropdown-menu { background-color: #eee; padding: 0px;}
.primary-filters .ac-chooser {
  display: inline-block;
  .ac-select-thumb {
    line-height: 30px;
  }
}
.bootstrap .primary-filters .form-control {width: 250px;}
.primary-filters > span { margin: 0 5px;}
#filter-container { margin-inline-start: 10px; }
#place-name-input input { margin-inline-start: 4px; }
#stats-container .col-xs-4 {
  overflow: hidden;
}
#stats-container,
#stats-container .statcol {
  height: 75px;
}
#stats-container {
  background: #565656;
  color: white;
  font-size: 17px;
  white-space: nowrap;
}
#stats-container > div {
  height: 100%;
}
#stats-container .geo {
  padding: 0px;
  line-height: 75px;
  background: none;
  border: 0px;
  font-weight: 400;
  color: #eee;
}
#stats-container .geo.selected {
  color: #fff;
  border: 2px solid $btn-orange;
  padding: 3px 5px 5px;
}
#stats-container .glyphicon-remove-sign {
  margin-inline-start: 5px;
  font-size: 0.7em;
  top: 0px;
}
#stats-container .stat-title {
  font-weight: 400;
  padding-bottom: 5px;
  letter-spacing: 0.12em;
  color: #eee;
  font-size: 14px;
  position: relative;

}
#stats-container .stat-title i {
  line-height: 18px;
  background-color: #999;
  width: 18px;
  height: 18px;
  border-radius: 50px;
  text-align: center;
  font-size: 12px;
  position: absolute;
  top: 0;
  inset-inline-end: 0;
}
#stats-container .stat-title i:before {
  position: relative;
  inset-inline-start: 0.5px;
}
#stats-container .stat-value {
  font-weight: 600;
  font-size: 20px;
  line-height: 25px;
}
#stats-container .statcol {
  cursor: pointer;
}
#stats-container .statcol.active {
  background: #86a91c;
  margin-inline-end: -1px;
  z-index: 1;
}
#stats-container .stat {
  margin: 15px 0;
  border-inline-start: 1px solid #aaa;
  margin-inline-start: -15px;
  padding-inline-start: 15px;
}
#stats-container .statcol.active .stat,
#stats-container #obsstatcol .stat { border: 0 transparent; }

#obs-container .dateloc,
#obs-container .observation .meta,
#obs-container .observation .has-com-name .secondary-name {
  font-size: 12px;
  line-height: 18px;
}
#obs-container .dateloc {
  padding-inline-end: 36px;
}
#obs-container .observation .date,
#obs-container .observation .location {
  display: inline-block;
  white-space: nowrap;
}
#obs-container .observation .pull-right .date:before {
  content: none;
}
#obs-container .observation { position: relative; }
/* ... */

